# gameEngine2d

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main  start.bat  tilemap_test
Core/: CMakeLists.txt  core.h  main.c
Core/Animation/include/: animated_frame.h  animated_sprite.h  animated_spritesheet.h  animation.h  animation_frame.h  animation_settings.h  dynamic_animation.h  static_animation.h
Core/Animation/src/: animated_sprite.c  animated_spritesheet.c  animation.c  dynamic_animation.c  static_animation.c
Core/Components/include/: animation_component.h  data_component.h  hitbox_component.h  input_component.h  position_component.h  size_component.h  sprite_component.h  tag_component.h  transform_component.h  velocity_component.h
Core/Components/src/: animation_component.c  data_component.c  hitbox_component.c  input_component.c  position_component.c  size_component.c  sprite_component.c  tag_component.c  transform_component.c  velocity_component.c
Core/Engine/include/: exit_engine.h  init_engine.h
Core/Engine/src/: exit_engine.c  init_engine.c
Core/Entities/include/: entity.h
Core/Entities/src/: entity.c
Core/Events/include/: event.h  event_manager.h  signal.h  signal_manager.h  timer_manager.h
Core/Events/src/: event.c  event_manager.c  signal.c  timer_manager.c
Core/Font/include/: font.h  label.h
Core/Font/src/: font.c  label.c
Core/Globals/include/: constants.h  globals.h
Core/Globals/src/: globals.c
Core/Graphics/include/: animated_sprite.h  animated_spritesheet.h  animation.h  aspect.h  button.h  cell.h  color.h  core_graphics.h  font.h  frame.h  (+9 more)
(+197 files in other folders)
